--- a/pipelines/incubator/validate-active-stack-task.yaml
+++ b/pipelines/incubator/validate-active-stack-task.yaml
@@ -94,18 +94,24 @@ spec:
         ###  MAIN ###
         
         
-        #Setting insecure image registries
-        #executing the insecure_registry_setup.sh script if exists, to add user mentioned registry url to insecure registry list
-        if [ -f "/scripts/insecure_registry_setup.sh" ]; then
-           echo "INFO: Running the script /scripts/insecure_registry_setup.sh ...."
-           /scripts/insecure_registry_setup.sh
+        #executing the insecure_registry_setup.sh script if exists, to add internal registry to insecure registry list
+        echo "Running the script /scripts/insecure_registry_setup.sh ...."
+        /scripts/insecure_registry_setup.sh
+        retVal=$?
+        if [ $retVal -ne 0 ]
+        then
+           echo "The script failed(/scripts/insecure_registry_setup.sh)" >&2
+           exit $retVal
         fi
 
-        #Making tls-verify=true for the image registries based on additional trusted ca certs provided by the user.
         #executing the ca_certs_setup.sh script if exists, to add additional trusted ca certs to /etc/docker/certs.d/<hosname>/ca.crt
-        if [ -f "/scripts/ca_certs_setup.sh" ]; then
-           echo "INFO: Running the script /scripts/ca_certs_setup.sh ...."
-           /scripts/ca_certs_setup.sh
+        echo "Running the script /scripts/ca_certs_setup.sh ...."
+        /scripts/ca_certs_setup.sh
+        retVal=$?
+        if [ $retVal -ne 0 ]
+        then
+           echo "The script failed(/scripts/ca_certs_setup.sh)" >&2
+           exit $retVal
         fi
        
         # env var gitsource
