--- a/pipelines/incubator/image-scan-task.yaml
+++ b/pipelines/incubator/image-scan-task.yaml
@@ -55,15 +55,23 @@ spec:
           echo "INPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE=$INPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE"
  
           #executing the insecure_registry_setup.sh script if exists, to add internal registry to insecure registry list
-          if [ -f "/scripts/insecure_registry_setup.sh" ]; then
-             echo "Running the script /scripts/insecure_registry_setup.sh ...."
-             /scripts/insecure_registry_setup.sh
+          echo "Running the script /scripts/insecure_registry_setup.sh ...."
+          /scripts/insecure_registry_setup.sh
+          retVal=$?
+          if [ $retVal -ne 0 ]
+          then
+             echo "The script failed(/scripts/insecure_registry_setup.sh)" >&2
+             exit $retVal
           fi
 
           #executing the ca_certs_setup.sh script if exists, to add additional trusted ca certs to /etc/docker/certs.d/<hosname>/ca.crt
-          if [ -f "/scripts/ca_certs_setup.sh" ]; then
-             echo "Running the script /scripts/ca_certs_setup.sh ...."
-             /scripts/ca_certs_setup.sh
+          echo "Running the script /scripts/ca_certs_setup.sh ...."
+          /scripts/ca_certs_setup.sh
+          retVal=$?
+          if [ $retVal -ne 0 ]
+          then
+             echo "The script failed(/scripts/ca_certs_setup.sh)" >&2
+             exit $retVal
           fi
         
           echo "Pulling image docker://$INPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE"
