--- a/pipelines/experimental/gitops/build-push-promote-pl-tr.yaml
+++ b/pipelines/experimental/gitops/build-push-promote-pl-tr.yaml
@@ -1,4 +1,4 @@
-apiVersion: tekton.dev/v1alpha1
+apiVersion: triggers.tekton.dev/v1alpha1
 kind: TriggerBinding
 metadata:
   name: build-push-promote-pl-pullrequest-binding
@@ -20,7 +20,7 @@ spec:
   - name: webhooks-tekton-git-branch
     value: $(body.webhooks-tekton-git-branch)
 ---
-apiVersion: tekton.dev/v1alpha1
+apiVersion: triggers.tekton.dev/v1alpha1
 kind: TriggerBinding
 metadata:
   name: build-push-promote-pl-push-binding
@@ -42,7 +42,7 @@ spec:
   - name: webhooks-tekton-git-branch
     value: $(body.webhooks-tekton-git-branch)
 ---
-apiVersion: tekton.dev/v1alpha1
+apiVersion: triggers.tekton.dev/v1alpha1
 kind: TriggerTemplate
 metadata:
   name: build-push-promote-pl-template
@@ -100,7 +100,7 @@ spec:
       params:
       - name: url
         value: $(params.webhooks-tekton-docker-registry)
-  - apiVersion: tekton.dev/v1alpha1
+  - apiVersion: tekton.dev/v1beta1
     kind: PipelineRun
     metadata:
       generateName: build-push-promote-pl-run-
@@ -115,8 +115,6 @@ spec:
       pipelineRef:
         name: build-push-promote-pl
       params:
-      - name: event-type
-        value: $(params.event-type)
       - name: docker-imagename
         value: $(params.docker-imagename)
       - name: docker-imagetag
@@ -130,5 +128,3 @@ spec:
       - name: docker-image
         resourceRef: 
           name: docker-image-$(uid)
-
-
