--- a/pipelines/experimental/gitops/build-push-promote-pl.yaml
+++ b/pipelines/experimental/gitops/build-push-promote-pl.yaml
@@ -1,4 +1,4 @@
-apiVersion: tekton.dev/v1alpha1
+apiVersion: tekton.dev/v1beta1
 kind: Pipeline
 metadata:
   name: build-push-promote-pl
@@ -16,10 +16,12 @@ spec:
     - name: docker-image
       type: image
   tasks:
-    - name: utilities-task
+    - name: build-push-promote-task
       taskRef:
-        name: utilities-task
+        name: build-push-promote-task
       params:
+        - name: git-project
+          value: "$(params.git-project)"
         - name: docker-imagename
           value: "$(params.docker-imagename)"
         - name: docker-imagetag
@@ -28,28 +30,9 @@ spec:
         inputs:
         - name: git-source
           resource: git-source
-        - name: docker-image
-          resource: docker-image
-        outputs:
-        - name: git-source
-          resource: git-source
-    - name: build-push-promote-task
-      taskRef:
-        name: build-push-promote-task
-      runAfter: [utilities-task]
-      params:
-        - name: git-project
-          value: "$(params.git-project)"
-      resources:
-        inputs:
-        - name: git-source
-          resource: git-source
-          from: [utilities-task]
         outputs:
         - name: docker-image
           resource: docker-image
-        - name: git-source
-          resource: git-source
     - name: image-scan-task
       taskRef:
         name: image-scan-task
@@ -58,6 +41,5 @@ spec:
         inputs:
         - name: git-source
           resource: git-source
-          from: [utilities-task]
         - name: docker-image
           resource: docker-image
