--- a/pipelines/incubator/validate-active-stack-task.yaml
+++ b/pipelines/incubator/validate-active-stack-task.yaml
@@ -12,7 +12,7 @@ spec:
   - name: validate-stack-is-active
     securityContext:
       privileged: true
-    image: kabanero/validate-stack:0.6.0
+    image: kabanero/kabanero-utils:0.9.0
     command: ["/bin/bash"]
     args:
       - -c
