Fix substitution logic

--- a/pipelines/incubator/events/monitor-task.yaml
+++ b/pipelines/incubator/events/monitor-task.yaml
@@ -1,3 +1,4 @@
+#Kabanero! on activate substitute Digest for text '@Digest@'
 # Monitor the pipelinerun status and update the pull request
 apiVersion: tekton.dev/v1beta1
 kind: Task
