--- a/pipelines/incubator/build-task.yaml
+++ b/pipelines/incubator/build-task.yaml
@@ -70,6 +70,10 @@ spec:
          
         cd /workspace/$gitsource
         appsody build -t "$OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE" --buildah --buildah-options "--format=docker" --stack-registry "$STACK_IMAGE_REGISTRY_URL"
+        if [ $? != 0 ]; then
+            echo "Appsody build failed.  Please review the appsody build logs above.  Pipeline run aborted."
+            exit 1
+        fi
     env:
     - name: gitsource
       value: git-source
