--- a/pipelines/incubator/build-push-task.yaml
+++ b/pipelines/incubator/build-push-task.yaml
@@ -1,4 +1,12 @@
 #Kabanero! on activate substitute StackId for text 'StackId'
+#
+# This task will build an appsody project specificed in the git-source using `appsody build` 
+# and push the generated application image to the specified image registry. The image can be optionally
+# signed before it's pushed to the registry. 
+#
+# Insecure registy access or secure connection to the image registry can be setup by configuring the 
+# OpenShift cluster resource.  For more information, refer to https://kabanero.io/guides/working-with-pipelines/#transport-layer-security-tls-verification-for-image-registry-access-in-pipelines
+#
 apiVersion: tekton.dev/v1beta1
 kind: Task
 metadata:
@@ -24,6 +32,8 @@ spec:
     default: ""
   steps:
   - name: enforce-stack-policy-pre-build
+    # This step enforces the pre build stack governance policy configured in the Kabanero CR.
+    # Refer to https://kabanero.io/docs/ref/general/reference/semver-governance.html for policy details.
     securityContext:
       privileged: true
     image: kabanero/kabanero-utils:0.9.0
@@ -38,12 +48,9 @@ spec:
       value: git-source
     volumeMounts:
     - mountPath: /var/lib/containers
-      name: varlibcontainers
-    - name: config-volume
-      mountPath: /config
-    - name: secret-volume
-      mountPath: /etc/secret-volume        
+      name: varlibcontainers     
   - name: build
+    # This steps builds the source project using appsody build.
     securityContext:
       privileged: true
     image: kabanero/kabanero-utils:0.9.0
@@ -51,6 +58,9 @@ spec:
     args:
       - -c
       - |
+        # Configure image registry access in the container by adding it to the insecure registry list or enabling TLS verification
+        # by adding it to the trust store based on OpenShift cluster resource configuration.
+        
         #executing the insecure_registry_setup.sh script if exists, to add internal registry to insecure registry list
         echo "Running the script /scripts/insecure_registry_setup.sh ...."
         /scripts/insecure_registry_setup.sh
@@ -71,33 +81,38 @@ spec:
            exit $retVal
         fi
  
+        # Docker does not support upper case characters in the image name.  Github does not have this restriction.
+        # So lowercase the image name if it has any upper case characters.
         OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE=$( /scripts/imageurl_imagename_lowercase.sh -u $(inputs.resources.docker-image.url) -n $(inputs.params.docker-imagename) -t $(inputs.params.docker-imagetag) )
         retVal=$?
         if [ $retVal -ne 0 ]
         then
-           echo "The script failed(/scripts/imageurl_imagename_lowercase.sh) Reason: $OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE" >&2
+           echo "[ERROR] The script failed(/scripts/imageurl_imagename_lowercase.sh) Reason: $OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE" >&2
            exit $retVal
         fi
         
+        # If the image registry URL of the stack image is the external route of the internal registry, change the stack regisry URL to the 
+        # internal route.  This avoids having to configure additional secrets, certificates etc.
         OUTPUTS_STACK_IMAGE_REGISTRY_URL=$( /scripts/stack_registry_url_setup.sh )
         retVal=$?
         if [ $retVal -ne 0 ]
         then
-           echo "The script failed(/scripts/stack_registry_url_setup.sh) Reason: $OUTPUTS_STACK_IMAGE_REGISTRY_URL" >&2
+           echo "[ERROR] The script failed(/scripts/stack_registry_url_setup.sh) Reason: $OUTPUTS_STACK_IMAGE_REGISTRY_URL" >&2
            exit $retVal
         fi
 
-        echo "OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE=$OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE"
-        echo "OUTPUTS_STACK_IMAGE_REGISTRY_URL that will be used to pull the stack =$OUTPUTS_STACK_IMAGE_REGISTRY_URL"
-        
+        echo "[INFO] Stack registry URL = $OUTPUTS_STACK_IMAGE_REGISTRY_URL"
+        echo "[INFO] Application image URL = $OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE"
+
         cd /workspace/$gitsource
+        echo "[INFO] Running appsody build..."
         appsody build -t "$OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE" --buildah --buildah-options "--format=docker" --stack-registry "$OUTPUTS_STACK_IMAGE_REGISTRY_URL"
         if [ $? != 0 ]; then
-            echo "Appsody build failed.  Please review the appsody build logs above.  Pipeline run aborted."
+            echo "[ERROR] Appsody build failed.  Please review the appsody build logs above.  Pipeline run aborted."
             exit 1
         fi
         
-        echo "Copying the generated app-deploy.yaml file from input to the output to pass the file to the next task when this task is used in deploy pipeline"
+        echo "[INFO] Copying the generated app-deploy.yaml file to the next task of the pipeline..."
         cp app-deploy.yaml $(outputs.resources.git-source.path)
     env:
     - name: gitsource
@@ -106,6 +121,8 @@ spec:
     - mountPath: /var/lib/containers
       name: varlibcontainers
   - name: enforce-stack-policy-post-build
+    # This step enforces the post build stack governance policy configured in the Kabanero CR.
+    # Refer to https://kabanero.io/docs/ref/general/reference/semver-governance.html for policy details.
     securityContext:
       privileged: true
     image: kabanero/kabanero-utils:0.9.0
@@ -120,12 +137,9 @@ spec:
       value: git-source
     volumeMounts:
     - mountPath: /var/lib/containers
-      name: varlibcontainers
-    - name: config-volume
-      mountPath: /config
-    - name: secret-volume
-      mountPath: /etc/secret-volume       
+      name: varlibcontainers   
   - name: push
+    # Push the image built in the build step to the specified image registry.  Optionally sign the image.
     securityContext:
       privileged: true
     image: kabanero/kabanero-utils:0.9.0
@@ -133,15 +147,20 @@ spec:
     args:
       - -c
       - |
-
+        # Docker does not support upper case characters in the image name.  Github does not have this restriction.
+        # So lowercase the image name if it has any upper case characters.
         OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE=$( /scripts/imageurl_imagename_lowercase.sh -u $(inputs.resources.docker-image.url) -n $(inputs.params.docker-imagename) -t $(inputs.params.docker-imagetag) )
         retVal=$?
         if [ $retVal -ne 0 ]
         then
-           echo "The script failed(/scripts/imageurl_imagename_lowercase.sh) Reason: $OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE" >&2
+           echo "[ERROR] The script failed(/scripts/imageurl_imagename_lowercase.sh) Reason: $OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE" >&2
            exit $retVal
         fi
-        echo "OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE=$OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE"
+        
+        echo "[INFO] Application image URL = $OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE"
+
+        # Configure image registry access in the container by adding it to the insecure registry list or enabling TLS verification
+        # by adding it to the trust store based on OpenShift cluster resource configuration.
 
         #executing the insecure_registry_setup.sh script if exists, to add internal registry to insecure registry list
         echo "Running the script /scripts/insecure_registry_setup.sh ...."
@@ -163,33 +182,35 @@ spec:
            exit $retVal
         fi
 
-        #if /image-signing-config/registry does not exist, a container image signature is not generated.
+        # Check if /image-signing-config/registry is setup to enable container image signature generation.
         REPO=`cat /image-signing-config/registry`
         if [[ -z $REPO ]]
         then
-           echo "Signature will not be generated."
+           echo "[INFO] Signature will not be generated."
+           echo "[INFO] Pushing image to registry..."
            buildah push "$OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE" "docker://$OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE"
         else
-           echo "Signature will be generated."
+           echo "[INFO] Signature will be generated."
            if [[ $OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE != $REPO/* ]]; then
-              echo "The specified signed image repository does not match the name of the repository in image-signing-config secret resource. The repository name should start with $REPO, Specified signed image name is $OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE"
+              echo "[ERROR] The specified signed image repository does not match the name of the repository in image-signing-config secret resource. The repository name should start with $REPO, Specified signed image name is $OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE"
               exit 1
            fi
            #importing RSA secret key, then extract an e-mail address from it.
            gpg --import /image-signing-config/secret.asc
            SIGNBY=`gpg --list-keys|sed -n -e "/.*<.*>.*/p"|sed -e "s/^.*<\(.*\)>.*$/\1/"`
+           echo "[INFO] Pushing image to registry..."
            skopeo copy --remove-signatures --sign-by $SIGNBY "containers-storage:$OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE" "docker://$OUTPUTS_RESOURCE_DOCKER_IMAGE_URL_LOWERCASE"
            RESULT=$?
            if [ $RESULT -ne 0 ]; then
-              echo "sign-image failed. exit code : $RESULT"
+              echo "[ERROR] sign-image failed. exit code : $RESULT"
               exit $RESULT
            fi
            if [[ -z `cat /image-signing-config/sigstore` ]]; then
-              echo "Signature is stored in the image registry"
+              echo "[INFO] Signature is stored in the image registry"
            else
               #invoking scripts for processing a generated signature.
-              echo "A signature is stored by scripts."
-              for f in /sigstore-script/*; do [ -f "$f" ] || break; echo "Processing $f"; $f;  done
+              echo "[INFO] A signature is stored by scripts."
+              for f in /sigstore-script/*; do [ -f "$f" ] || break; echo "[INFO] Processing $f"; $f;  done
            fi
         fi
     env:
@@ -204,14 +225,9 @@ spec:
       name: registries-d
     - mountPath: /sigstore-script
       name: sigstore-script
-
   volumes:
   - name: varlibcontainers
     emptyDir: {}
-  - name: config-volume
-    configMap:
-      name: stack-image-registry-map
-      optional: true
   - name: registries-d
     configMap:
       name: registries-d
@@ -220,10 +236,6 @@ spec:
     configMap:
       name: sigstore-script
       defaultMode: 0555
-      optional: true
-  - name: secret-volume
-    secret:
-      secretName: default-stack-image-registry-secret
       optional: true
   - name: image-signing-config
     secret:
