--- a/pipelines/incubator/events/event-listener.yaml
+++ b/pipelines/incubator/events/event-listener.yaml
@@ -8,14 +8,14 @@ spec:
   triggers:
   - bindings:
     - apiversion: v1alpha1
-      name: build-push-deploy-pl-@Digest@-push-binding
+      name: build-push-promote-pl-@Digest@-push-binding
     interceptors:
     - cel:
         filter: 'body["webhooks-tekton-event-type"] == "push" && body["webhooks-tekton-git-branch"] == "master"'
     name: kabanero-push-event
     template:
       apiversion: v1alpha1
-      name: build-push-deploy-pl-@Digest@-template
+      name: build-push-promote-pl-@Digest@-template
   - bindings:
     - apiversion: v1alpha1
       name: build-pl-@Digest@-pullrequest-binding
