updated the echo commands

--- a/pipelines/incubator/validate-active-stack-task.yaml
+++ b/pipelines/incubator/validate-active-stack-task.yaml
@@ -101,7 +101,7 @@ spec:
         retVal=$?
         if [ $retVal -ne 0 ]
         then
-           echo "ERROR: The script failed(/scripts/application_image_registry_access_setup.sh)" >&2
+           echo "ERROR: The script failed(/scripts/application_image_registry_access_setup.sh), and the image registry access setup was not complete, aborting the pipelinerun." >&2
            exit $retVal
         fi
        
